--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "axios": "^1.6.0",
     "date-fns": "^4.1.0",
+    "i18next": "^25.7.4",
     "lucide-react": "^0.454.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^16.5.3",
     "react-router-dom": "^6.21.0"
   },
   "devDependencies": {
